<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shashankbhat.musicplayer.ui.HomeFragment"
        android:label="@string/home">
    </fragment>

    <fragment
        android:id="@+id/navigation_downloads"
        android:name="com.shashankbhat.musicplayer.ui.DownloadFragment"
        android:label="@string/downloads">
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.shashankbhat.musicplayer.ui.SettingsFragment"
        android:label="@string/settings">
    </fragment>

</navigation>