<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/song_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/widget_margin"
    android:background="@color/bottom_bar_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bottom_bar_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/songArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_bar_subtitle"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/downloading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_arrow_left"
            android:backgroundTint="@color/bottom_bar_subtitle"
            android:contentDescription="@string/previous_song" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_play"
                android:backgroundTint="@color/bottom_bar_subtitle"
                android:contentDescription="@string/play"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_pause"
                android:backgroundTint="@color/bottom_bar_subtitle"
                android:contentDescription="@string/pause"
                android:visibility="visible" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_arrow_right"
            android:backgroundTint="@color/bottom_bar_subtitle"
            android:contentDescription="@string/next_song" />

    </LinearLayout>
</LinearLayout>
